[Mac][Material Design] Fix TabStripController test that fails under MD.

This cl fixes a bug in one of the TabStripController unit tests. The
test used hard-coded mouse coordinates which no longer work because of
the new max tab width in Material Design.

This cl also fixes a bug where the new Material Design max tab width
was being used on non-MD.

R=avi@chromium.org
BUG=609254

Review-Url: https://codereview.chromium.org/1946993004
Cr-Commit-Position: refs/heads/master@{#391684}

Former-commit-id: a8910b7b3b79c8ea6c508bc06c14fd4e1e84c0fd