chrome/browser/ui/cocoa/tabs/tab_strip_controller.h
@@ -264,6 +264,9 @@ class WebContents;
 // Default indentation for tabs (see |leftIndentForControls_|).
 + (CGFloat)defaultLeftIndentForControls;
 
+// Returns the amount by which tabs overlap.
++ (CGFloat)tabOverlap;
+
 // Returns the currently active TabContentsController.
 - (TabContentsController*)activeTabContentsController;
 
